# backend-teamy

./: Dockerfile  README.md  alembic.ini  delete_db.py  entrypoint.sh  pyproject.toml  seed_db.py
app/: announcements.py  auth.py  cloudinary.py  config.py  dashboard.py  database.py  dependencies.py  filehub.py  html_sanitizer.py  main.py  models.py  notifications.py  projects.py  schemas.py  security.py  startup_diagnostics.py  tasks.py  team.py  team_realtime.py  time_utils.py  user_responses.py
migrations/: env.py
migrations/versions/: 0001_create_users.py  0001_initial_schema.py  0002_create_projects.py  0003_create_tasks.py  0004_create_file_hub.py  0005_create_announcements.py  0006_add_project_archive_state.py  0007_add_user_profile_fields.py  0008_add_google_avatar_url.py  0009_add_user_last_online_at.py  0010_add_task_review_remarks.py  0011_add_announcement_deadline_date.py  0012_add_project_member_nickname.py  0013_create_notifications.py  0014_create_email_verification_codes.py  0015_add_task_start_date.py  0016_drop_email_verification_codes.py  0017_add_record_only_flags.py  0018_add_private_tasks.py  0019_drop_task_priority.py  0020_add_announcement_deadline_done_at.py  0021_add_performance_indexes.py
tests/: conftest.py  test_announcements.py  test_auth.py  test_config.py  test_filehub.py  test_notifications.py  test_projects.py  test_tasks.py  test_team.py
