[project]
name = "backend-teamy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "aiomysql>=0.3.2",
    "bcrypt>=4.0,<4.1",
    "cryptography>=46.0.3",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pymysql>=1.1.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.46.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
